update icc paper

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
          </hgroup>
          <aside>
          <ul>
+         <li><b>10/15/2017</b>. Our paper "<b>Sentiment Analysis of Marijuana Content via Facebook Emoji-based Reactions</b>" has been submitted to <a href ="http://icc2018.ieee-icc.org/" target="_blank">ICC 2018</a>
+         </li>
          <li><b>01/20/2017</b>. Our paper "<b>Revealing the Demographics of Marijuana Use via Craigslist Ads</b>" has been accepted as short paper to <a href ="http://w3phiai2017.w3phi.com/index.html" target="_blank">AAAI 2017 Joint Workshop on Health Intelligence (W3PHIAI)</a>, 2017
          </li>
          <li><b>01/15/2017</b>. I am looking for a self-motivated undergraduate student to work on a data mining research project (hourly paid). If you are interested in the position, please send me your most updated resume.
