--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <nav class="horizontal">   
          <ul>
-            <li><a:hover href="index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="awards.html">Awards</a></li>
             <li><a href="research.html">Research</a></li>
             <li><a href="teaching.html">Teaching</a></li>
