--- a/teaching.html
+++ b/teaching.html
@@ -39,7 +39,7 @@
          <h2>Courses:</h2>
 
          <ul>
-            <li> CSC105X <b>Introduction to Programming</b> (C#)(Winter 2017).
+            <li> CSC105X <b>Introduction to Programming</b> (C#)(2016, 2017).
             </li>
             <li> CSC118 <b>Computer Applications</b> (Microsoft Office Suite)(Summer 2015).
             </li>
@@ -47,19 +47,19 @@
             </li>
             <li> CSC230X <b>Web Design</b> (Fall 2016)
             </li>
-            <li> CSC272X <b>Principles of Systems Design</b> (Fall 2016)
+            <li> CSC272X <b>Principles of Systems Design</b> (Fall 2016, 2017)
             </li>
             <li> CSC303/303X <b>Computer Operating Systems</b> (Spring 2015, Winter, Summer 2016)
             </li>
-            <li> CSC306 <b>Systems Architecture</b> (Spring 2015, 2016)
+            <li> CSC306 <b>Systems Architecture</b> (Spring 2015, 2016, 2017)
             </li>
             <li> CSC320 <b>Algorithms and Data Structures using Java</b> (Spring 2015, 2016)
             </li>
             <li> CSC364 <b>Systems Analysis and Design</b> (Fall 2016)
             </li>
-            <li> CSC405X <b>Advanced Telecommunications and Networking</b> (Summer 2016)
+            <li> CSC405X <b>Advanced Telecommunications and Networking</b> (Summer 2016, 2017)
             </li>
-            <li> CSC414X <b>Senior Seminar in Information Technology</b> (Capstone) (2015, 2016)
+            <li> CSC414X <b>Senior Seminar in Information Technology</b> (Capstone) (2015, 2016, 2017)
             </li>
             <li> CSC450 <b>Software Engineering</b> (Summer 2016)
             </li>
