new features added

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                Address: 3101 Bardstown Road, Louisville, KY 40205
             </p>
             <p>
-           <!-- GoStats JavaScript Based Code 
-            <script type="text/javascript">(function(c,o,m,p,u,t,e){
+           <!-- GoStats JavaScript Based Code --> 
+           <!--  <script type="text/javascript">(function(c,o,m,p,u,t,e){
             c['GoStatsObject']=u;c[u]=c[u]||function(){(c[u].q=c[u].q||[]).push(arguments)},
             c[u].l=1*new Date();t=o.createElement(m);t.async=1;t.src=p;
             e=o.getElementsByTagName(m)[0];e.parentNode.insertBefore(t,e);
             })(window,document,'script','//www.gostats.org/5.js','go');
             go('init',100487767,{'img_counter_type':6,'img_image_type':46});go('send');</script>
-            </p>
-             End GoStats JavaScript Based Code -->
+            </p> -->
+            <!--  End GoStats JavaScript Based Code -->
          </nav>
             <!--
             <nav class="vertical">
