--- a/publication.html
+++ b/publication.html
@@ -38,6 +38,7 @@
 
          <h2>Book Chapter</h2>
          <ul>
+            <li>A. Nguyen, H. Pham, D. Nguyen and T. Tran, “<em>Towards Monitoring Marijuana Activities via User-generated Content Platforms and Social Networks,</em>” In Book “Online Public Health Intelligence,” <b>Springer</b>, 2017.</li>
             <li> B. He, T. Tran, and B. Xie, “<em>Authentication and Identity Management for Secure Cloud Businesses and Services,</em>” In Book “Security, Trust, and Regulatory Aspects of Cloud Computing in Business Environments,” <b>IGI Global</b>, 2013.
             </li>
          </ul>
