--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <img src="Tran.jpg" alt="Tran photo" />
             <br></br>
             <p> <b>Dr. Tuan Tran</b><br>
-               Assistant Professor <br>
-               College of Information and Computer Technology <br>
+               Professor of Information Technology <br>
+               College of Business and Technology <br>
                Sullivan University <br>
                <br>
                Email: ttran at sullivan dot edu <br>
