--- a/index_0.html
+++ b/index_0.html
@@ -25,7 +25,7 @@
             <img src="Tran.jpg" alt="Tran photo" />
             <br></br>
             <p> <b>Dr. Tuan Tran</b><br>
-               Assistant Professor <br>
+               Professor <br>
                College of Information and Computer Technology <br>
                Sullivan University <br>
                <br>
