--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <br></br>
             <p> <b>Dr. Tuan Tran</b><br>
                Professor of Information Technology <br>
-               College of Business and Technology <br>
+               College of Business and Technology (COBT) <br>
                Sullivan University <br>
                <br>
                Email: ttran at sullivan dot edu <br>
