--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
          <h1>Welcome</h1>
          <p>
-            Dr. Tran is a professor of information technology with the College of Business and Technology (CBT) at Sullivan University. His current research interests lie in the areas of computer science and information technology including machine learning, data mining and business intelligence, distributed and cloud computing, cybersecurity, networking and embedded systems.
+            Dr. Tran is a professor of information technology with the College of Business and Technology (COBT) at Sullivan University. His current research interests lie in the areas of computer science and information technology including machine learning, data mining and business intelligence, distributed and cloud computing, cybersecurity, networking and embedded systems.
          </p>
          <br>
          <h2>Education</h2>
